crates/library/tests/unit/snapshots/main__unit__execute__load_favorites_replies_with_the_saved_set.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    FavoritesLoaded(
        {
            "/music/a.flac",
        },
    ),
)
