crates/library/tests/unit/snapshots/main__unit__execute__rescan_replies_with_the_tracks_it_found_under_the_revision_it_was_given.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    Loaded(
        LibraryLoaded {
            tracks: [
                Track {
                    path: "[tmp]/music/a.wav",
                    duration: Some(
                        100ms,
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: Some(
                            "Wav",
                        ),
                        bitrate_kbps: Some(
                            64,
                        ),
                        sample_rate_hz: Some(
                            8000,
                        ),
                        bits_per_sample: Some(
                            8,
                        ),
                        channels: Some(
                            1,
                        ),
                        replay_gain: None,
                    },
                    display: "a.wav",
                    tagging: Read,
                },
            ],
            revision: Revision(
                1,
            ),
        },
    ),
)
