crates/library/tests/unit/snapshots/main__unit__execute__scan_library_lists_placeholder_tracks_under_the_revision_it_was_given.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    Listed {
        tracks: [
            Track {
                path: "[tmp]/music/a.wav",
                duration: None,
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "a",
                tagging: Listed,
            },
        ],
        revision: Revision(
            2,
        ),
    },
)
